--- a/QfirstSolution/index.html
+++ b/QfirstSolution/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Task1</title>
 </head>
 <body>
     <!-- This page is using for just loading the js on web browser for testing pursuse -->
